src/test/deca/codegen/valid/homemade/test/test_complet_hexa2.deca
{
    float x5 = 0xAb.fP+1f;
    println("x = ", (x5));
}